manifests/user.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: microservice_user:1.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: user
  type: LoadBalancer
