manifests/web.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: microservice_web:1.0
          ports:
            - containerPort: 3000
      dnsConfig:
        nameservers:
          - 8.8.8.8
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web-service
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: web
  type: NodePort
