manifests/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: microservice.test
      http:
        paths:
          - backend:
              serviceName: web-service
              servicePort: 3000
